mdapi/objects/Visit__c/fields/Beneficiary_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Type__c</fullName>
    <label>Beneficiary Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minorenne</fullName>
            </value>
            <value>
                <fullName>Donna</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>