mdapi/objects/Visit__c/fields/Data_della_Visita__c.field-meta.xml
<CustomField>
    <fullName>Data_della_Visita__c</fullName>
    <label>Data della Visita</label>
    <type>Date</type>
</CustomField>