mdapi/objects/Visit__c/fields/Duration_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_minutes__c</fullName>
    <label>Duration (in minutes)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>