mdapi/objects/Visit__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>