mdapi/objects/Visit__c/fields/Tipo_Visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Visita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo Visita</label>
    <referenceTo>Tipo_Visita__c</referenceTo>
    <relationshipLabel>Visite Mediche</relationshipLabel>
    <relationshipName>Visite_Mediche</relationshipName>
    <type>Lookup</type>
</CustomField>