mdapi/objects/Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>