mdapi/objects/Visit__c/fields/Visit_Type_other__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type_other__c</fullName>
    <label>Visit Type (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>